--- a/BottleCollectorGWT/build.gradle
+++ b/BottleCollectorGWT/build.gradle
@@ -1,5 +1,17 @@
 apply plugin: "java"
 apply plugin: "jetty"
+apply plugin: "gwt"
+apply plugin: "war"
+
+
+dependencies {
+    compile project(":bottlecollector-core")
+    compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
+    compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
+    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
+    compile "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+}
 
 gwt {
     gwtVersion='2.6.0' // Should match the gwt version used for building the gwt backend
