--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':bottlecollector-core',':BottleCollectorAndroid', ':BottleCollectorDesktop', ':BottleCollectorGWT'
+include ':bottlecollector-core',':BottleCollectorAndroid', ':BottleCollectorDesktop'
