--- a/BottleCollectorAndroid/build.gradle
+++ b/BottleCollectorAndroid/build.gradle
@@ -1,7 +1,7 @@
-apply plugin: "com.android.application"
+apply plugin: 'com.android.application'
 
 android {
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "27.0.0"
     compileSdkVersion 22
     sourceSets {
         main {
