--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@ buildscript {
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         jcenter()
     }
     dependencies {
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'org.robovm:robovm-gradle-plugin:1.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.3'
     }
 }
 
@@ -18,7 +22,7 @@ allprojects {
 
     ext {
         appName = 'BottleCollector'
-        gdxVersion = '1.5.6'
+        gdxVersion = '1.9.6'
         roboVMVersion = '1.0.0'
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
@@ -58,4 +62,8 @@ project(":bottlecollector-core") {
 
 tasks.eclipse.doLast {
     delete ".project"
+}
+
+task buildScriptDependencies(type: org.gradle.api.tasks.diagnostics.DependencyReportTask) {
+    configurations = project.buildscript.configurations
 }
