--- a/BottleCollectorAndroid/build.gradle
+++ b/BottleCollectorAndroid/build.gradle
@@ -1,8 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    buildToolsVersion "27.0.0"
-    compileSdkVersion 22
+    buildToolsVersion "27.0.3"
+    compileSdkVersion 27
+
+    defaultConfig {
+        minSdkVersion 14
+        targetSdkVersion 27
+    }
+
+
     sourceSets {
         main {
             jniLibs.srcDirs = ['lib']
@@ -14,7 +21,7 @@ android {
             assets.srcDirs = ['src/main/assets']
         }
 
-        instrumentTest.setRoot('tests')
+
     }
 
 }
@@ -24,12 +31,12 @@ android {
 configurations { natives }
 
 dependencies {
-    compile project(":bottlecollector-core")
-    compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+    implementation project(":bottlecollector-core")
+    implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
     natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
     natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
     natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
-    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi"
     natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi-v7a"
     natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
